fixed side-bar overflow

--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@ body {
   left: 0;
   bottom: 0;
   width: 220px;
-  overflow-y: auto;
+  overflow: hidden;
   background: rgba(0, 0, 0, 0.5);
 }
 
